# Solana-Plonk

./: Cargo.toml  README.md  clean.md
circuits/bound-range-check/: Cargo.toml
circuits/bound-range-check/src/: circuit.rs  lib.rs  prover.rs  shadow.rs
circuits/challenge-check/: Cargo.toml
circuits/challenge-check/src/: circuit.rs  lib.rs  prover.rs
circuits/external-sp/: Cargo.toml
circuits/external-sp/src/: lib.rs
circuits/fibonacci/: Cargo.toml
circuits/fibonacci/src/: circuit.rs  lib.rs  prover.rs
circuits/multi-lookup-check/: Cargo.toml
circuits/multi-lookup-check/src/: circuit.rs  lib.rs  prover.rs  shadow.rs
circuits/multi-phase-check/: Cargo.toml
circuits/multi-phase-check/src/: lib.rs
circuits/range-check/: Cargo.toml
circuits/range-check/src/: circuit.rs  lib.rs  prover.rs  shadow.rs
circuits/shuffle-check/: Cargo.toml
circuits/shuffle-check/src/: circuit.rs  lib.rs  prover.rs  shadow.rs
clients/devnet-send/src/: main.rs
clients/reward-pool-cli/: Cargo.toml
clients/reward-pool-cli/src/: main.rs
crates/fr-batch-inv-ref/: Cargo.toml
crates/fr-batch-inv-ref/src/: lib.rs
crates/g1-msm-ref/: Cargo.toml
crates/g1-msm-ref/src/: lib.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: error.rs  field.rs  lib.rs  stage_state.rs  syscalls.rs  vk.rs
crates/verifier/src/kzg/: shplonk.rs
crates/verifier/src/plonk/: expression.rs  lagrange.rs  lookup.rs  mod.rs  permutation.rs  proof_reader.rs  shuffle.rs  verifier.rs
crates/vk-host/src/: compile.rs  encode.rs  expression_encoder.rs  lib.rs
docs/: 2_tx_split.md  EVIDENCE.md  compatibility.md  cu_profile.md  reward_pool.md
docs/simd-proposals/: PR-BODY.md  SUBMISSION-GUIDE.md  simd-XXXX-alt-bn128-fr-batch-inverse.md  simd-XXXX-alt-bn128-g1-msm.md
programs/g1-msm-bench/: Cargo.toml
programs/g1-msm-bench/src/: lib.rs
programs/g1-msm-bench/tests/: cu_grid.rs
programs/reward-pool/: Cargo.toml
programs/reward-pool/src/: lib.rs
programs/verifier-program/: Cargo.toml
programs/verifier-program/src/: lib.rs
programs/verifier-program/tests/: cu_bench_3tx_all.rs  cu_bench_brc.rs  cu_bench_fib.rs  cu_bench_fib_3tx.rs  cu_bench_ml.rs  cu_bench_rc.rs  cu_bench_sh.rs
