[package]
name        = "bound-range-check-circuit"
version     = "0.1.0"
description = "Phase 2 demo circuit: range-check Plookup bound to a claimer pubkey hash via instance column"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[[bin]]
name = "gen-brc-proof"
path = "src/bin/gen_brc_proof.rs"

[lib]
name = "bound_range_check_circuit"
path = "src/lib.rs"

[dependencies]
halo2_proofs  = { workspace = true }
halo2curves   = { workspace = true }

ark-bn254     = { workspace = true, features = ["std"] }
ark-serialize = { workspace = true, features = ["std"] }

halo2-solana-vk-host  = { path = "../../crates/vk-host" }
halo2-solana-verifier = { path = "../../crates/verifier", features = ["std", "solana-syscalls"] }
standard-plonk-circuit = { path = "../standard-plonk" }   # reuse Keccak-BE transcript

rand      = "0.8"
rand_core = "0.6"
sha3      = "0.10"
anyhow    = "1"

[features]
default = []
debug-trace = ["halo2-solana-verifier/debug-trace"]
circuit-params = []
