[package]
name        = "multi-phase-check-circuit"
version     = "0.1.0"
description = "v2.1 test circuit: 2-phase advice + Phase-0-challenge — exercises proof_reader's phase-interleaved read loop"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[[bin]]
name = "gen-mp-proof"
path = "src/bin/gen_mp_proof.rs"

[lib]
name = "multi_phase_check_circuit"
path = "src/lib.rs"

[dependencies]
halo2_proofs  = { workspace = true }
halo2curves   = { workspace = true }

ark-bn254     = { workspace = true, features = ["std"] }
ark-serialize = { workspace = true, features = ["std"] }

halo2-solana-vk-host  = { path = "../../crates/vk-host" }
halo2-solana-verifier = { path = "../../crates/verifier", features = ["std", "solana-syscalls"] }
standard-plonk-circuit = { path = "../standard-plonk" }

rand      = "0.8"
rand_core = "0.6"
anyhow    = "1"
