[package]
name        = "fr-batch-inv-ref"
version     = "0.1.0"
description = "Reference implementation: BN254 Fr batch-inverse via Montgomery's trick (SIMD-XXXX-alt-bn128-fr-batch-inverse)"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[lib]
name = "fr_batch_inv_ref"
path = "src/lib.rs"

[dependencies]
ark-bn254 = { workspace = true }
ark-ff    = { workspace = true }

[dev-dependencies]
ark-std   = { workspace = true, features = ["std"] }

[features]
default = []
std     = ["ark-bn254/std", "ark-ff/std"]
