[package]
name        = "g1-msm-ref"
version     = "0.1.0"
description = "Reference implementation of alt_bn128_g1_msm for the SIMD proposal — Pippenger window-NAF MSM over BN254 G1, no_std-compatible"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[lib]
name = "g1_msm_ref"
path = "src/lib.rs"

[features]
default = []
std     = ["ark-bn254/std", "ark-ec/std", "ark-ff/std", "ark-serialize/std"]

[dependencies]
ark-bn254       = { workspace = true }
ark-ec          = { workspace = true }
ark-ff          = { workspace = true }
ark-serialize   = { workspace = true }
ark-std         = { workspace = true }

[dev-dependencies]
hex             = { workspace = true, features = ["std"] }
