[package]
name        = "g1-msm-bench-program"
version     = "0.1.0"
description = "BPF benchmark harness for naive vs Pippenger G1 MSM"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
bpf-entrypoint = []

[dependencies]
pinocchio  = { workspace = true, features = ["alloc"] }
g1-msm-ref = { path = "../../crates/g1-msm-ref" }
ark-bn254  = { workspace = true }
ark-ec     = { workspace = true }
ark-ff     = { workspace = true }
ark-serialize = { workspace = true }
solana-bn254 = { workspace = true }

[dev-dependencies]
mollusk-svm    = { workspace = true }
solana-program = { workspace = true }
solana-account = "3"
ark-std        = { workspace = true, features = ["std"] }
